get logged user API and change password API
